infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: client-depl
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: client
    template: 
        metadata: 
            labels:
                app: client
        spec: 
            containers:
                - name: client
                  image: srinivasr553/blog-client:latest
---
apiVersion: v1
kind: Service
metadata: 
    name: client-clusterip-srv
spec:
    selector: 
        app: client
    type: ClusterIP
    ports:
        - name: client
          protocol: TCP
          port: 3000
          targetPort: 3000
