infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata: 
    name: posts-srv
spec: 
    type: NodePort
    selector: 
        app: posts
    ports: 
        - name: posts
          protocol: TCP
          port: 4000
          targetPort: 4000
---
apiVersion: v1
kind: Service
metadata: 
    name: posts-query-srv
spec: 
    type: NodePort
    selector: 
        app: query-service
    ports: 
        - name: query-service
          protocol: TCP
          port: 4003
          targetPort: 4003
